; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_nd6.c_nd6_llinfo_alloc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_nd6.c_nd6_llinfo_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.llinfo_nd6 = type { i32 }

@M_WAITOK = common dso_local global i32 0, align 4
@llinfo_nd6_zone = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.llinfo_nd6* (i32)* @nd6_llinfo_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.llinfo_nd6* @nd6_llinfo_alloc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.llinfo_nd6*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @M_WAITOK, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @llinfo_nd6_zone, align 4
  %9 = call %struct.llinfo_nd6* @zalloc(i32 %8)
  br label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @llinfo_nd6_zone, align 4
  %12 = call %struct.llinfo_nd6* @zalloc_noblock(i32 %11)
  br label %13

13:                                               ; preds = %10, %7
  %14 = phi %struct.llinfo_nd6* [ %9, %7 ], [ %12, %10 ]
  store %struct.llinfo_nd6* %14, %struct.llinfo_nd6** %3, align 8
  %15 = load %struct.llinfo_nd6*, %struct.llinfo_nd6** %3, align 8
  %16 = icmp ne %struct.llinfo_nd6* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %13
  %18 = load %struct.llinfo_nd6*, %struct.llinfo_nd6** %3, align 8
  %19 = call i32 @bzero(%struct.llinfo_nd6* %18, i32 4)
  br label %20

20:                                               ; preds = %17, %13
  %21 = load %struct.llinfo_nd6*, %struct.llinfo_nd6** %3, align 8
  ret %struct.llinfo_nd6* %21
}

declare dso_local %struct.llinfo_nd6* @zalloc(i32) #1

declare dso_local %struct.llinfo_nd6* @zalloc_noblock(i32) #1

declare dso_local i32 @bzero(%struct.llinfo_nd6*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
